# arrow-debreu-equilibrium

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: arrow-debreu-equilibrium.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  demand.py  economy.py  edgeworth.py  eisenberg_gale.py  tatonnement.py  utilities.py  welfare.py
src/viz/: __init__.py  app.py
tests/: test_demand.py  test_edgeworth.py  test_tatonnement.py  test_welfare.py
